[package]
name = "onyx-launcher"
version = "0.1.7"
edition = "2024"
description = "A near-instant, GPU-driver-free app drawer that slides up from the Windows taskbar."
license = "MIT"
repository = "https://github.com/siddarth1872004/onyx-launcher"

[dependencies]
anyhow = "1.0.103"
eframe = { version = "0.35.0", default-features = false, features = ["glow"] }
ico = "0.5.0"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "bmp"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_UI_Shell", "Win32_System_Com", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_Security", "Win32_UI_HiDpi", "Win32_Storage_FileSystem", "Win32_Graphics_GdiPlus", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_System_Ole"] }
winit = { version = "0.30.13", features = ["rwh_06"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
